--- a/helm/webapplication/templates/deployment.yaml
+++ b/helm/webapplication/templates/deployment.yaml
@@ -39,11 +39,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: "/{{ .Values.appName }}/"
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: "/{{ .Values.appName }}/"
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
